# mark2haru

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-and-test.yml
build-vs-cleanup/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  mark2haru.sln  mark2haru.vcxproj  mark2haru.vcxproj.filters  mark2haruConfig.cmake  mark2haru_core.vcxproj  mark2haru_core.vcxproj.filters  test_png.vcxproj  test_png.vcxproj.filters
build-vs-cleanup/mark2haru.dir/Debug/: mark2haru.exe.recipe
build-vs-cleanup/mark2haru.dir/Debug/mark2haru.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
build-vs-cleanup/mark2haru_core.dir/Debug/: mark2haru_core.lib.recipe
build-vs-cleanup/mark2haru_core.dir/Debug/mark2haru_core.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
build-vs-cleanup/test_png.dir/Debug/: test_png.exe.recipe
build-vs-cleanup/test_png.dir/Debug/test_png.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  test_png.lastbuildstate
build-vs-cleanup/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
build-vs-cleanup/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
cmake/: check_pdf_header.cmake  mark2haruConfig.cmake.in
examples/: neutral_brief.md  western_european.md
include/mark2haru/: font_context.h  mark2haru.h  markdown.h  pdf_writer.h  png_image.h  render.h  table_layout.h  ttf_font.h
src/: font_context.cpp  font_context.h  io_helpers.h  main.cpp  markdown.cpp  pdf_writer.cpp  pdf_writer.h  png_image.cpp  png_image.h  render.cpp  render.h  table_layout.cpp  text_layout.h  ttf_font.cpp  ttf_font.h  utf8_decode.h
tests/: test_common.h  test_failure_paths.cpp  test_markdown.cpp  test_pdf_writer.cpp  test_png.cpp  test_table_layout.cpp
